--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div class="roots">
       <div id="root1"></div>
       <div id="root2"></div>
+      <div class="w-full mx-auto text-center col-span-2 py-1">
+        <span class="text-lg">El código de esta página con ambas implementaciones lo he dejado en un repositorio al cual puedes ir en este </span>
+        <a target="_blank" class="text-blue hover:underline cursor-pointer text-blue-400" href="https://github.com/zenx5/context-wrapper-example">link</a>
+      </div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
